老板娘修改了分支x

--- a/1.html
+++ b/1.html
@@ -37,6 +37,10 @@
     <button type="submit"></button>
     <button type="reset"></button>
  
-    	<p>老板让做一次</p>
+        <p>老板让做一次</p>
+        <p>
+
+       老板娘修改了分支x，冲突进行时
+        </p>
     </bt>
 </html>
